--- a/app/config.properties
+++ b/app/config.properties
@@ -1,4 +1,4 @@
-mysql.host=jdbc:mysql://localhost:3306/ams
+mysql.host=jdbc:mysql://localhost:3306/bookstore_java
 mysql.username=root
 mysql.password=
 
