--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ dependencies {
 
 }
 
+run {
+   standardInput = System.in
+}
+
 application {
     // Define the main class for the application.
     mainClass = 'org.example.bookstore.App'
